test/src/e2e_vm_tests/test_programs/should_fail/recover_unclosed_delim/src/main.sw
contract;

fn a() -> bool {
    0 // recovery witness
}

fn b() {
    if true {
